increase recent edits sidebar width + show more of names + fix overlapping text

--- a/app/assets/stylesheets/materialize-overrides.scss
+++ b/app/assets/stylesheets/materialize-overrides.scss
@@ -11,6 +11,10 @@
   overflow: hidden;
 }
 
+#recent-edits-sidenav {
+  min-width: 20%;
+}
+
 @media only screen and (min-width: 1024px) {
   .fixed-card-content
   {
